--- a/style.css
+++ b/style.css
@@ -1,5 +1,27 @@
-div {
+h1 {
+  text-align: center;
+}
+
+#keys {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  
+}
+
+.white {
     height: 200px;
     width: 30px;
     border: 1px solid black;
   }
+
+.black {
+  background-color: black; 
+     
+}
+
+.note {
+  flex: 1;
+  display: inline-flex;
+  align-items: center;
+}
