--- a/style.css
+++ b/style.css
@@ -6,16 +6,21 @@ h1 {
   display: flex;
   flex-direction: row;
   justify-content: center;
+  font-family: monospace;
+  font-weight: bold;
+  font-size: 25px;
 }
 
 .white {
-    height: 200px;
+    height: 500px;
     width: 30px;
     border: 1px solid black;
   }
 
 .black {
   background-color: black;
+  height: 300px;
+  color: white;
 }
 
 .note {
@@ -25,3 +30,10 @@ h1 {
   justify-content: center;
 }
 
+#demo {
+  display: flex;
+  justify-content: center;
+  font-size: 70px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-weight: bold;
+}
