--- a/style.css
+++ b/style.css
@@ -1,9 +1,16 @@
 h1 {
   text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 h2 {
   text-align: center;
+  font-size: 40px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+body {
+  background-color: cornflowerblue;
 }
 
 #keys {
@@ -19,6 +26,7 @@ h2 {
     height: 500px;
     width: 50px;
     border: 1px solid black;
+    background-color: white;
   }
 
 .black {
