--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ h2 {
   color: blanchedalmond;
 }
 
-/* styling credit: https://codepen.io/zastrow/pen/oDBki */
+/* piano styling credit: https://codepen.io/zastrow/pen/oDBki */
 
 * {
   box-sizing:border-box
