--- a/style.css
+++ b/style.css
@@ -53,26 +53,44 @@ li {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
-ul .white {
+ul .white, ul .yellow {
   height:16em;
   width:4em;
   z-index:1;
+  border-radius:0 0 5px 5px;
+}
+ul .white {
   border-left:1px solid #bbb;
   border-bottom:1px solid #bbb;
-  border-radius:0 0 5px 5px;
   box-shadow:-1px 0 0 rgba(255,255,255,0.8) inset,0 0 5px #ccc inset,0 0 3px rgba(0,0,0,0.2);
   background:linear-gradient(to bottom,#eee 0%,#fff 100%);
 }
+ul .yellow {
+  border-left:1px solid #bb0;
+  border-bottom:1px solid #bb0;
+  box-shadow:-1px 0 0 rgba(255,255,0,0.8) inset,0 0 5px #cc0 inset,0 0 3px rgba(0,0,0,0.2);
+  background:linear-gradient(to bottom,#ee0 0%,#ff0 100%);
+}
 
-.black {
+.black, .purple {
   height:8em;
   width:2em;
   margin:0 0 0 -1em;
   z-index:2;
-  border:1px solid #000;
   border-radius:0 0 3px 3px;
+}
+
+.black {
+  border:1px solid #000;
   box-shadow:-1px -1px 2px rgba(255,255,255,0.2) inset,0 -5px 2px 3px rgba(0,0,0,0.6) inset,0 2px 4px rgba(0,0,0,0.5);
   background:linear-gradient(45deg,#222 0%,#555 100%);
+  color: bisque;
+}
+
+.purple {
+  border:1px solid #f0f;
+  box-shadow:-1px -1px 2px rgba(255,0,255,0.2) inset,0 -5px 2px 3px rgba(255,0,255,0.6) inset,0 2px 4px rgba(255,0,255,0.5);
+  background:linear-gradient(45deg,#202 0%,#505 100%);
   color: bisque;
 }
 
